--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -211,9 +211,9 @@ ggplot(data = plot_data_team) +
   labs(title = title_response_team, x = x_label_team, y = y_label_team)
 ```
 
-The skewed to the left pattern continues when grouping the time remaining by the feedback conditions. Most of the teams seem to have about 50 seconds remaining when the task was completed. 
+The skewed to the left pattern continues when grouping the time remaining by the feedback conditions. Most of the teams seem to have about 50 seconds remaining when they completed the tast. 
 
-*Reflection:* The skewness in the time remaining data at the team level. This skewness suggests that most of the teams had about the same amount of time remaining at the end of the session (50 or 40 seconds). 
+*Reflection:* The skewness in the time remaining data at the team level(Something missing here). This skewness suggests that most of the teams had about the same amount of time remaining at the end of the session (50 or 40 seconds). 
 
 #### Individual
 
@@ -231,7 +231,7 @@ ggplot(data = plot_data_ind) +
   labs(title = title_response_ind, x = x_label_ind, y = y_label_ind)
 ```
 
-Overall, the time remaining at the individual level is skewed to the left. This skewness tells me that most of the participants had 50 seconds or left at the end of the sessions. I also notice that there are a number of data points that are distributed from about 60 to 350. Are there similar characteristics among the teams that have more than 50 seconds remaining at the end of the sessions?
+Overall, the time remaining at the individual level is skewed to the left. This skewness tells me that most of the participants had 50 seconds or left at the end of the sessions. I also notice that there are a number of data points distributed from about 60 to 350. Are there similar characteristics among the teams that have more than 50 seconds remaining at the end of the sessions?
 
 ```{r}
 dependent_response_ind <- "timeRemaining_ind"
@@ -251,12 +251,12 @@ ggplot(data = plot_data_ind) +
 
 The distribution for each condition is similar to the overall condition. This similarity tells me that most individuals finished with about 50 seconds or so left at the end of each session. It seems as though we can say the high performing individuals finished with over 50 seconds or so left at the end of the session. Do high performing individuals have similar characteristics?
 
-*Reflection:* The distribution is similar to the distribution of the time remaining at the team level. The distribution was skewed to the left and most of the time remaining at the end of the session was about 50 or 60 seconds  
+*Reflection:* The distribution is similar to the distribution of the time remaining at the team level. The distribution skewed to the left and most of the time remaining at the end of the session was about 50 or 60 seconds  
   
   
 #### Summary / Reflection
 
-Overall, the data looks to be skewed to the left. According to the count at the individual and team level, the teams and players that finished with more than 50 seconds or so left at the end of the session were high performing teams. There did not seem to be any obvious pattern when grouping the data by Feedback conditions. Maybe the feedback conditions influenced the amount of time remaining depending on their experience (i.e., session order)? 
+Overall, the data skewed to the left. According to the count at the individual and team level, the teams and players that finished with more than 50 seconds or so left at the end of the session were high performing teams. There did not seem to be any obvious pattern when grouping the data by Feedback conditions. Maybe the feedback conditions influenced the amount of time remaining depending on their experience (i.e., session order)? 
 
 ### Q: Is there exciting variation among the *time remaining* that explains how the feedback conditions influence the time remaining when session order is taken into consideration?
 
@@ -279,10 +279,10 @@ ggplot(data = plot_data_team) +
 
 It looks like the time remaining for teams in the individual feedback condition did not change the amount of time remaining at the end of the session. The lack of change is unusual because I would expect the distribution to spread over time because teams would get better and they would complete the task quicker.   
   
-It looks like the time remaining for the individual_team condition seems to spread over time. Meaning that the teams were completing the task faster the more they completed the task. I would not be surprised if the Individual_Team condition were trending to significant.  
+It looks like the time remaining for the individual_team condition seems to spread over time, which means that the teams were completing the task faster the more times they completed the task. I would not be surprised if the Individual_Team condition were trending to significant.  
   
   
-It looks like the distribution of the amount of time remaining at the end of the session in the team feedback condition starts to spread over time. This distrabution is what I would expect to see.
+It looks like the distribution of the amount of time remaining at the end of the session in the team feedback condition starts to spread over time. This distribution is what I would expect to see.
 
 *Reflection:* I would expect to see the distribution of time remaining spread over time because the teams would learn the task and get better at the task. This pattern is not followed in the individual condition. The distribution of the time remaining in the individual condition does not seem to spread over time. The amount of time remaining is consistent no matter what session order (i.e., 2,3, or 4) they are in. This consistency would suggest that giving individual performance metrics does not influence the amount of time remaining at the end of the session for a team. 
 
@@ -482,7 +482,7 @@ A note on the effect size ($R^2$). This method generates two types of ($R^2$) va
 
 #### Full Models Used for Team and Individual
 
-The next two sections below describe the full model for team and individual level analysis. Eight models were fitted and then compared. Eight other models are a subset of the full model (including a null model that has no fixed effect variables). One or two fixed effects are removed from the full model. 
+The next two sections below describe the full model for team and individual level analysis. Eight models were fitted and then compared. Eight other models are a subset of the full model (including a null model that has no fixed effect variables). I removed one or two fixed effects from the full model. 
 
 ##### Team Full Model
 
@@ -604,12 +604,12 @@ Overall, these models (model.NoInteraction.NoTarget, model.NoInteraction) seemed
 
 It seems as though the answer to the original questions about the interaction is that there seems to be no statistically significant effect from the interaction between the session order and the target. The fact that that there is no statistically significant effect from the interaction of the session order and target on the individual and team level, suggests that there is no interaction between the variables.  
 
-My next step is to examin the models and see what I can learn from these models. Are any of the effects in these models significantly different from zero?
+My next step is to examine the models and see what I can learn from these models. Are any of the effects in these models significantly different from zero?
 
 
 ### Q: Are any of the effects in the two models (model.NoInteraction.NoTarget and model.NoInteraction) statistically different from zero?
 
-The purouse of this questions is to see what we can learn from these models. Before I examine the model I will test the assumption about the residuals of the models. The assumtions are as follows [@Galwey2014]:
+The purpose of this question is to see what we can learn from these models. Before I examine the model, I will test the assumption about the residuals of the models. The assumptions are as follows [@Galwey2014]:
 
 * The residuals should have an approximately normal distribution (i.e., a bell curve) when plotted on a histogram
 * A fitted-value plot should show an almost constant width when viewed from left to right
@@ -677,17 +677,17 @@ ggplot(model.NoInteraction.NoTarget, aes(sample = .resid)) +
 
 ```
 
-It looks like there are some assumption violation for both models. 
+It looks like there is some assumption violation for both models. 
 
-For the model.NoInteraction it looks like there may be a violation of constran error in the fitted-value plot. The QQ plot also shows a slight violation on the tail ends of the plots. 
+For the model.NoInteraction it looks like there may be a violation of constant error in the fitted-value plot. The QQ plot also shows a slight violation on the tail ends of the plots. 
 
-For the model.NoInteraction.NoTarget it looks like there may be a violation of constran error in the fitted-value plot. The QQ plot also shows a slight violation on the tail ends of the plots. 
+For the model.NoInteraction.NoTarget it looks like there may be a violation of constant error in the fitted-value plot. The QQ plot also shows a slight violation on the tail ends of the plots. 
 
-I need to determine if this violation influences the model over all.
+I need to determine if this violation influences the model overall.
 
 ##### Q: Does the violation influence the linear model estimation?
 
-I will used the robust estimation for linear mixed models found in the robustlmm package by @Koller2016. I will then compare the robust model to the non-robust model. If the estimated values are noticablly different then data will need to be transformed. 
+I will use the robust estimation for linear mixed models found in the robustlmm package by @Koller2016. I will then compare the robust model to the non-robust model. If the estimated values are noticeably different, then data will need to be transformed. 
 
 
 ```{r}
@@ -711,7 +711,7 @@ kable(compare(model.NoInteraction, rmodel.NoInteraction, show.rho.functions = FA
 
 ```
 
-The robust model.NoInteration model is noticablly different when compared to the non-robust model.NoInteration. This suggest that the data should be transformed to satisfy the residual assumptions
+The robust model.NoInteration model is noticeably different when compared to the non-robust model.NoInteration. This suggests that the data should be transformed to satisfy the residual assumptions
 
 
 ```{r}
@@ -735,11 +735,11 @@ kable(compare(model.NoInteraction.NoTarget, rmodel.NoInteraction.NoTarget, show.
       caption = "model.NoInteraction.NoTarget")
 ```
 
-The robust model.NoInteraction.NoTarget model is noticablly different when compared to the non-robust model.NoInteraction.NoTarget This suggest that the data should be transformed to satisfy the residual assumptions
+The robust model.NoInteraction.NoTarget model is noticeably different when compared to the non-robust model.NoInteraction.NoTarget This suggests that the data should be transformed to satisfy the residual assumptions
 
-*Reflection:* The comparing the normal estimation to the robust models indicates that the data should transformed becuase the estimations are noticablly different.
+*Reflection:* Comparing the normal estimation to the robust models indicates that the data should be transformed because the estimates are noticeably different.
 
-##### Q: Does data transformtion satisfy the assumptions of the residuals?
+##### Q: Does data transformation satisfy the assumptions of the residuals?
 
 I will use the square root transformation method from Tukey's ladder [@Tukey1977]. 
 
@@ -825,11 +825,11 @@ ggplot(model.NoInteraction.NoTarget, aes(sample = .resid)) +
 
 The diagnostic plots suggest the transformation has resolved the assumption violations for the model.NoInteraction.NoTarget
 
-*Reflection:* The figures suggest that the data transformation resolved the resdiual violations for the both models. I will use the square root transformation and model that data transformation.
+*Reflection:* The figures suggest that the data transformation resolved the residual violations for both models. I will use the square root transformation and model that data transformation.
 
 ##### Q: Are there any effects that are significant?
 
-I want to determine if there is a significant effect from the Target variable. I will examine the model itself and then I will calculate the estimated marginal means to compare all three levels.
+I want to determine if there is a significant effect from the Target variable. I will examine the model itself, and then I will calculate the estimated marginal means to compare all three levels.
 
 ```{r}
 # Data to fit
@@ -850,7 +850,7 @@ model.NoInteraction <- model_data_Target_Session(df = data_focus_team, dependent
 summary(model.NoInteraction)
 ```
 
-The estaimations are in reference to the individual level for the Target variable and session 2 for the session order variable. The results suggest that that session 3 and 4 have a significant effect. This is expected. The results also suggest that the effect of the team and Ind_Team target levels do not have an effect that is greater than zero.
+The estimations are in reference to the individual level for the Target variable and session 2 for the session order variable. The results suggest that session 3 and 4 have a significant effect. This is expected. The results also indicate that the impact of the team and Ind_Team target levels do not have an effect that is greater than zero.
 
 ```{r}
 # Data to fit
@@ -891,9 +891,9 @@ model.NoInteraction <- model_data_Target_Session(df = data_focus_team, dependent
 emmeans(model.NoInteraction, list(pairwise ~ SessionOrder), adjust = "tukey")
 ```
 
-The estimated marginal means show a significant different between all of the sessions. This suggests that the amount of time remaining at the end of the session increased over time. 
+The estimated marginal means show a significant difference between all of the sessions. This suggests that the amount of time remaining at the end of the session increased over time. 
 
-*Reflection:* The *model.NoInteraction:* model shows no significant effect from the Target levels but it does show a significant effect from the session order. Specifically, all of the session order were significantly different from one another. This means that the amount of time remaining at the end of each session increased over time. 
+*Reflection:* The *model.NoInteraction:* model shows no significant effect from the Target levels, but it does show a significant effect from the session order. Specifically, all of the session order were significantly different from one another. This means that the amount of time remaining at the end of each session increased over time. 
 
 ```{r}
 # Data to fit
@@ -943,7 +943,7 @@ The results show a significant difference between each session.
 
 I had to transform the data to resolve some of the assumptions issues. I used one of the steps in the Tukey ladder @Tukey1977. I took the square root of all the values in the time remaining value for the teams.
 
-Overall, the results show no significant effect from the Target variable but it does show that session order had a significant effect. This means that the amount of time remaining at the end of each session increased over time. This is expected. There are no significant results that can be discussed about the Target variable because there were no statiscally significant results.
+Overall, the results show no significant effect from the Target variable, but it does show that the session order has a significant impact. This means that the amount of time remaining at the end of each session increased over time. This is expected. There are no significant results that can be discussed about the Target variable because there were no statistically significant results.
 
 #### Individual
 ```{r}
@@ -981,7 +981,7 @@ ggplot(model.NoInteraction, aes(sample = .resid)) +
    theme(plot.title = element_text(hjust = 0.5)) 
 ```
 
-Visually, it looks like there may be a violation of constant error in the fitted value plot. It looks like there may also be a violation in the QQ plot (on the tail end of the plot). Will need to fit the robust model to see if I need to transform the data to resolve some of the assumption violations.
+Visually, it looks like there may be a violation of constant error in the fitted value plot. It seems like there may also be a violation in the QQ plot (on the tail end of the plot). Will need to fit the robust model to see if I need to transform the data to resolve some of the assumption violations.
 
 ```{r}
 # Data to model
@@ -1018,13 +1018,13 @@ ggplot(model.NoInteraction.NoTarget, aes(sample = .resid)) +
    theme(plot.title = element_text(hjust = 0.5)) 
 ```
 
-It looks like there migt be a violation with the constant error assumption (based on the fitted value plot) and there looks like there may be a violation with normallity based on the QQ plot. I will need to fit a robust model to see if these apprent violations influence the model fit.
+It looks like there might be a violation with the constant error assumption (based on the fitted value plot) and there looks like there may be a violation with normality based on the QQ plot. I will need to fit a robust model to see if these apparent violations influence the model fit.
 
-*Reflection:* Overall, it looks like I need to compare the models to the robust models to see if I need to worry about the assunption violations
+*Reflection:* Overall, it looks like I need to compare the models to the robust models to see if I need to worry about the assumption violations
 
 ##### Q: Does the violation influence the linear model estimation?
 
-I will used the robust estimation for linear mixed models found in the robustlmm package by @Koller2016. I will then compare the robust model to the non-robust model. If the estimated values are noticablly different then data will need to be transformed. 
+I will use the robust estimation for linear mixed models found in the robustlmm package by @Koller2016. I will then compare the robust model to the non-robust model. If the estimated values are noticeably different then data will need to be transformed. 
 
 ```{r}
 # Data to model
@@ -1045,7 +1045,7 @@ kable(compare(model.NoInteraction, rmodel.NoInteraction, show.rho.functions = FA
       caption = "model.NoInteraction")
 ```
 
-There is a noticable difference between the non-robust model and the robust model. This indicates that the data should be transformed to attempt to satisfy the assumptions.
+There is a noticeable difference between the non-robust model and the robust model. This indicates that the data should be transformed to attempt to satisfy the assumptions.
 
 ```{r}
 # Data to model
@@ -1066,9 +1066,9 @@ kable(compare(model.NoInteraction.NoTarget, rmodel.NoInteraction.NoTarget, show.
 ```
 There is a noticable difference between the non-robust model and the robust model. This indicates that the data should be transformed to attempt to satisfy the assumptions.
 
-*Reflection:* Overall, I need to transform the data because there is a very noticable difference between the robust model and the non-robust model.
+*Reflection:* Overall, I need to transform the data because there is a very noticeable difference between the robust model and the non-robust model.
 
-##### Q: Does data transformtion satisfy the assumptions of the residuals?
+##### Q: Does data transformation satisfy the assumptions of the residuals?
 
 I will use the square root transformation method from Tukey's ladder [@Tukey1977]. 
 
@@ -1131,7 +1131,7 @@ rmodel.NoInteraction <- model_data_Target_Session(df = data_focus_ind, dependent
 compare(model.NoInteraction, rmodel.NoInteraction, show.rho.functions = FALSE)
 ```
 
-Comparing the robust and non-robust model does not reveal any noticably different value.
+Comparing the robust and non-robust model does not reveal any noticeably different value.
 
 ```{r}
 # Data to model
@@ -1193,7 +1193,7 @@ compare(model.NoInteraction.NoTarget, rmodel.NoInteraction.NoTarget, show.rho.fu
 
 ```
 
-Comparing the robust and non-robust model does not reveal any noticably different value.
+Comparing the robust and non-robust model does not reveal any noticeably different value.
 
 
 ##### Q: Are there any effects that are significant?
@@ -1217,7 +1217,7 @@ model.NoInteraction <- model_data_Target_Session(df = data_focus_ind, dependent 
 summary(model.NoInteraction)
 ```
 
-The results showed a significant effect from session 3 and 4 when compared to session 2. The results showed no signifcant effect from Target levels. However, it is important to note that the effect from the Team Target level is approaching significance (p = .0779). This suggest that more data is needed to reach significance. 
+The results showed a significant effect from session 3 and 4 when compared to session 2. The results showed no significant impact from Target levels. However, it is important to note that the effect from the Team Target level is approaching significance (p = .0779). This suggests that more data is needed to reach significance. 
 
 ```{r}
 # Data to model
@@ -1237,7 +1237,7 @@ model.NoInteraction <- model_data_Target_Session(df = data_focus_ind, dependent 
 
 emmeans(model.NoInteraction, list(pairwise ~ Target), adjust = "tukey")
 ```
-The results show a significant difference between the Int_Team and Team level of feedback. The difference indicates that amount of time remaining in the Team feedback condition results in higher time remaining. 
+The results show a significant difference between the Int_Team and Team level of feedback. The difference indicates that the amount of time remaining in the Team feedback condition results in higher time remaining. 
 
 
 
