Added source - Field 2017
This article mentions that the best way to test the assumption violation influence is to develop a robust model and then compare it to the classical model

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -45,3 +45,17 @@ url = {http://www.jstatsoft.org/v75/i06/},
 volume = {75},
 year = {2016}
 }
+
+@article{Field2017,
+abstract = {This paper reviews and offers tutorials on robust statistical methods relevant to clinical and experimental psychopathology researchers. We review the assumptions of one of the most commonly applied models in this journal (the general linear model, GLM) and the effects of violating them. We then present evidence that psychological data are more likely than not to violate these assumptions. Next, we overview some methods for correcting for violations of model assumptions. The final part of the paper presents 8 tutorials of robust statistical methods using R that cover a range of variants of the GLM (t-tests, ANOVA, multiple regression, multilevel models, latent growth models). We conclude with recommendations that set the expectations for what methods researchers submitting to the journal should apply and what they should report.},
+author = {Field, Andy P. and Wilcox, Rand R.},
+doi = {10.1016/j.brat.2017.05.013},
+file = {:C$\backslash$:/Users/jamia/Box/Mendeley Desktop/Field, Wilcox - 2017 - Robust statistical methods A primer for clinical psychology and experimental psychopathology researchers.pdf:pdf},
+issn = {1873622X},
+journal = {Behaviour Research and Therapy},
+keywords = {Assumptions,Bias,Robust statistical methods},
+pages = {19--38},
+title = {{Robust statistical methods: A primer for clinical psychology and experimental psychopathology researchers}},
+volume = {98},
+year = {2017}
+}
